# proxycurl-linkedin-rs

./: Cargo.toml  LICENSE  README.md  openapi-3.0.yaml
.github/: dependabot.yml
.github/workflows/: Rust_CI.yml
.openapi-generator/: FILES
docs/: AccomplishmentOrg.md  AcquiredCompany.md  Acquisition.md  Acquisitor.md  Activity.md  AffiliatedCompany.md  Article.md  CSearchResult.md  Certification.md  CompanyApiApi.md  CompanyDetails.md  CompanyLocation.md  CompanyReveal.md  CompanySearchResult.md  CompanySocialNetworkingService.md  CompanyType.md  CompanyUpdate.md  CompanyUrlEnrichResult.md  ContactApiApi.md  Course.md  CreditBalance.md  Date.md  DisposableEmail.md  Education.md  Employee.md  EmployeeCount.md  EmployeeList.md  Exit.md  Experience.md  ExtractionEmailResult.md  Funding.md  HonourAward.md  InferredSalary.md  Investor.md  JobCompany.md  JobListCount.md  JobListEntry.md  JobListPage.md  JobLocation.md  JobProfile.md  (+33 more)
src/: client.rs  error.rs  lib.rs
src/apis/: company_api.rs  configuration.rs  contact_api.rs  jobs_api.rs  meta_api.rs  mod.rs  people_api.rs  reveal_api.rs  school_api.rs  search_api.rs
src/models/: accomplishment_org.rs  acquired_company.rs  acquisition.rs  acquisitor.rs  activity.rs  affiliated_company.rs  article.rs  c_search_result.rs  certification.rs  company_details.rs  company_location.rs  company_reveal.rs  company_search_result.rs  company_social_networking_service.rs  company_type.rs  company_update.rs  company_url_enrich_result.rs  course.rs  credit_balance.rs  date.rs  disposable_email.rs  education.rs  employee.rs  employee_count.rs  employee_list.rs  exit.rs  experience.rs  extraction_email_result.rs  funding.rs  honour_award.rs  inferred_salary.rs  investor.rs  job_company.rs  job_list_count.rs  job_list_entry.rs  (+31 more)
(+4 files in other folders)
