[package]
name = "proxycurl-linkedin-rs"
version = "0.1.0"
edition = "2021"
categories = ["api-bindings", "asynchronous"]
authors = ["Anthony Rubick"]
description = "A Rust client for the Proxycurl LinkedIn API"
rust-version = "1.68"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/JARAMatch/proxycurl-linkedin-rs"
repository = "https://github.com/JARAMatch/proxycurl-linkedin-rs"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "^2.0"
serde_json = "^1.0"
url = "^2.2"
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
